# txt2cal

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml
.kiro/specs/calendar-event-converter/: design.md  requirements.md  tasks.md
config/: config.yaml
docs/: api-reference.md  development-guide.md  docker-deployment.md  user-guide.md
nginx/: nginx.conf
public/: index.html  manifest.json
server/: .env.example  .gitignore  package.json  server.js
server/middleware/: errorHandler.js  security.js
server/routes/: api.js
src/: App.css  App.js  __init__.py  api.py  config.py  exceptions.py  extractor.py  generator.py  index.css  main.py  models.py  parser.py  service.py
src/components/: CalendarPreview.js  ErrorMessage.js  Footer.js  Header.js  ItineraryInput.js  LoadingSpinner.js  OllamaStatus.js  SampleButton.js
src/services/: apiService.js  ollamaService.js  processingService.js
src/static/: index.html
src/tests/: calendarUtils.test.js  integration.test.js  processingService.test.js
src/utils/: calendarUtils.js  testUtils.js
tests/: __init__.py  test_api.py  test_config.py  test_container.py  test_extractor.py  test_generator.py  test_models.py  test_parser.py  test_service.py
